--- a/index.html
+++ b/index.html
@@ -11,36 +11,42 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header>
-      <nav class="main-nav">
-        <a href="./index.html" class="logo"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
-        >
-        <ul class="list">
-          <li class="item current">
-            <a href="./index.html" class="link">Студія</a>
+      <div class="container head">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo"
+            ><span class="web">Web</span><span class="studio">Studio</span></a
+          >
+          <ul class="list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студія</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфоліо</a>
+            </li>
+            <li class="item">
+              <a href="" class="link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="contacts">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="link">Портфоліо</a>
-          </li>
-          <li class="item">
-            <a href="" class="link">Контакти</a>
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="contacts">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
@@ -54,103 +60,135 @@
       </section>
 
       <!-- VALUES -->
-      <section class="section">
-        <h2 class="title hidden">Наші корпоративні цінності</h2>
-        <ul class="value-list">
-          <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-          </li>
-        </ul>
+      <section class="section value">
+        <div class="container">
+          <h2 class="section-title hidden">Наші корпоративні цінності</h2>
+          <ul class="value-list">
+            <li class="item">
+              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">ПЛАНУВАННЯ</h3>
+              <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li class="item">
+              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- LABOUR -->
-      <section class="section">
-        <h2 class="title">Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/desktop.jpg"
-              width="370"
-              height="294"
-              alt="робочий стол з комп'ютером"
-            />
-          </li>
-          <li>
-            <img src="./images/laptop.jpg" width="370" height="294" alt="ноутбук" />
-          </li>
-          <li>
-            <img src="./images/tablet.jpg" width="370" height="294" alt="планшет" />
-          </li>
-        </ul>
+      <section class="section labour">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="labour-list">
+            <li class="item">
+              <img
+                src="./images/desktop.jpg"
+                width="370"
+                height="294"
+                alt="робочий стол з комп'ютером"
+              />
+            </li>
+            <li class="item">
+              <img src="./images/laptop.jpg" width="370" height="294" alt="ноутбук" />
+            </li>
+            <li class="item">
+              <img src="./images/tablet.jpg" width="370" height="294" alt="планшет" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- TEAM -->
-      <section class="section">
-        <h2 class="title">Наша команда</h2>
-        <ul class="team-list">
-          <li>
-            <img src="./images/igor-demyanenko.jpg" alt="фото чоловіка" width="270" height="260" />
-            <h3 class="title">Ігор Дем'яненко</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/olga-repina.jpg" alt="фото жінки" width="270" height="260" />
-            <h3 class="title">Ольга Рєпіна</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/micola-tarasov.jpg" alt="фото чоловіка" width="270" height="260" />
-            <h3 class="title">Микола Тарасов</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/mikhailo-ermakov.jpg" alt="фото чоловіка" width="270" height="260" />
-            <h3 class="title">Михайло Єрмаков</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="item">
+              <img
+                src="./images/igor-demyanenko.jpg"
+                alt="фото чоловіка"
+                width="270"
+                height="260"
+                class="team-member"
+              />
+              <h3 class="title">Ігор Дем'яненко</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/olga-repina.jpg"
+                alt="фото жінки"
+                width="270"
+                height="260"
+                class="team-member"
+              />
+              <h3 class="title">Ольга Рєпіна</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/micola-tarasov.jpg"
+                alt="фото чоловіка"
+                width="270"
+                height="260"
+                class="team-member"
+              />
+              <h3 class="title">Микола Тарасов</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/mikhailo-ermakov.jpg"
+                alt="фото чоловіка"
+                width="270"
+                height="260"
+                class="team-member"
+              />
+              <h3 class="title">Михайло Єрмаков</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- FOOTER -->
     <footer class="foot">
-      <a href="./index.html" class="logo"
-        ><span class="web">Web</span><span class="studio">Studio</span></a
-      >
-      <address>
-        <ul class="adress">
-          <li class="street-adress item">
-            <a
-              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z"
-              class="link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="mail-adress item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-          </li>
-          <li class="phone-adress item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
+        >
+        <address>
+          <ul class="adress">
+            <li class="street-adress item">
+              <a
+                href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z"
+                class="link"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="mail-adress item">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="phone-adress item">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
