--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
+    <header class="header">
       <div class="container head">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
