--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
     <main>
       <!-- HERO -->
       <section class="hero">
-        <h1 class="title">
-          Ефективні рішення для<br />
-          вашого бізнесу
-        </h1>
+        <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
