--- a/index.html
+++ b/index.html
@@ -96,13 +96,26 @@
                 width="370"
                 height="294"
                 alt="робочий стол з комп'ютером"
+                class="labour-image"
               />
             </li>
             <li class="item">
-              <img src="./images/laptop.jpg" width="370" height="294" alt="ноутбук" />
+              <img
+                src="./images/laptop.jpg"
+                width="370"
+                height="294"
+                alt="ноутбук"
+                class="labour-image"
+              />
             </li>
             <li class="item">
-              <img src="./images/tablet.jpg" width="370" height="294" alt="планшет" />
+              <img
+                src="./images/tablet.jpg"
+                width="370"
+                height="294"
+                alt="планшет"
+                class="labour-image"
+              />
             </li>
           </ul>
         </div>
