--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                 />
                 <div class="work-item-description">
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                  <p>Дизайн</p>
+                  <p class="text">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -91,7 +91,7 @@
                 <img src="./images/seafood.jpg" alt="логотип ресторану у виглялі риби" />
                 <div class="work-item-description">
                   <h2 class="title">Ресторан Seafood</h2>
-                  <p>Додаток</p>
+                  <p class="text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -100,7 +100,7 @@
                 <img src="./images/project-prime.jpg" alt="навушники" width="370" height="294" />
                 <div class="work-item-description">
                   <h2 class="title">Проєкт Prime</h2>
-                  <p>Маркетинг</p>
+                  <p class="text">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -109,7 +109,7 @@
                 <img src="./images/project-boxes.jpg" alt="дві коробки" width="370" height="294" />
                 <div class="work-item-description">
                   <h2 class="title">Проєкт Boxes</h2>
-                  <p>Додаток</p>
+                  <p class="text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -118,7 +118,7 @@
                 <img src="./images/inspiration.jpg" alt="монітор" width="370" height="294" />
                 <div class="work-item-description">
                   <h2 class="title">Inspiration has no Borders</h2>
-                  <p>Веб-сайт</p>
+                  <p class="text">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -127,7 +127,7 @@
                 <img src="./images/limited-edition.jpg" alt="книга" width="370" height="294" />
                 <div class="work-item-description">
                   <h2 class="title">Видання Limited Edition</h2>
-                  <p>Дизайн</p>
+                  <p class="text">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -136,7 +136,7 @@
                 <img src="./images/project-lab.jpg" alt="лейба" width="370" height="294" />
                 <div class="work-item-description">
                   <h2 class="title">Проєкт LAB</h2>
-                  <p>Маркетинг</p>
+                  <p class="text">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -145,7 +145,7 @@
                 <img src="./images/growing-buisness.jpg" alt="ноутбук" width="370" height="294" />
                 <div class="work-item-description">
                   <h2 class="title">Growing Business</h2>
-                  <p>Додаток</p>
+                  <p class="text">Додаток</p>
                 </div>
               </a>
             </li>
